--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: ruby
 rvm:
     - 2.4.0-rc1
+env:
+    - RAILS_ENV=test
 before_script:
-    - rake db:migrate && rake db:test:prepare
+    - bin/rails db:migrate && bin/rails db:test:prepare
