--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
-    - 2.4.0-rc1
-env:
-    - RAILS_ENV=test
-before_script:
-    - bin/rails db:migrate && bin/rails db:test:prepare
+    - 2.4.0
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec spec/
